<resources>
    <string name="app_name">Parkir Client</string>
    <string name="title_home">Logout</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="login">Login</string>
    <string name="kode_parkiran">Kode Parkiran</string>
    <string name="nama_parkiran">Nama Parkiran</string>
    <string name="kapasitas">Kapasitas</string>
    <string name="edit_parkiran">Edit Parkiran</string>
    <string name="delete">Delete</string>
    <string name="kembali">Kembali</string>
    <string name="nomor_karcis">Nomor Karcis</string>
    <string name="plat_nomor">Plat Nomor</string>
    <string name="waktu_masuk">Waktu Masuk</string>
    <string name="waktu_keluar">Waktu Keluar</string>
    <string name="kode_tempat_parkir">Kode Tempat Parkir</string>
    <string name="durasi">Durasi</string>
    <string name="biaya_parkir">Biaya Parkir</string>
    <string name="keluar_parkiran">Keluar Parkiran</string>
    <string name="kembali">Kembali</string>
    <string name="kode_tempat_parkir">Kode Tempat Parkir</string>
    <string name="plat_nomor">Plat Nomor</string>
    <string name="plat_nomor">Plat Nomor</string>
    <string name="waktu_masuk">Waktu Masuk</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="login">Login</string>
    <string name="input_email">Input Email</string>
    <string name="input_password">Input Password</string>
    <string name="data_parkiran">Data Parkiran</string>
    <string name="kode_parkiran">Kode Parkiran</string>
    <string name="kode_parkiran">Kode Parkiran</string>
    <string name="nama_parkiran">Nama Parkiran</string>
    <string name="nama">Nama</string>
    <string name="kapasitas">Kapasitas</string>
    <string name="kapasitas">Kapasitas</string>
    <string name="tambah_parkiran">Tambah Parkiran</string>
    <string name="kembali">Kembali</string>
    <string name="data_transaksi_parkiran">Data Transaksi Parkiran</string>
    <string name="kembali">Kembali</string>
    <string name="plat_nomor">Plat Nomor</string>
    <string name="id">Id</string>
    <string name="waktu_masuk">Waktu Masuk</string>
    <string name="id">Id</string>
    <string name="nama">Nama</string>
    <string name="kapasitas">Kapasitas</string>
    <string name="kode_parkir">Kode Parkir</string>
    <string name="waktu_masuk">Waktu Masuk</string>
    <string name="waktu_keluar">Waktu Keluar</string>
    <string name="biaya">Biaya</string>
    <string name="plat">Plat</string>
    <string name="id">Id</string>
</resources>
