<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/dataContent">
        <TextView
            android:id="@+id/tvNomorkarcis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            android:layout_alignParentRight="true"
            android:textSize="15sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvPlat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/plat"
            android:layout_below="@id/tvNomorkarcis"
            android:textSize="15sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvKodeParkiran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/kode_parkir"
            android:textSize="15sp"
            android:layout_below="@id/tvPlat"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvWaktu_Masuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/waktu_masuk"
            android:textSize="15sp"
            android:layout_below="@id/tvKodeParkiran"
            />
        <TextView
            android:id="@+id/tvWaktu_Keluar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/waktu_keluar"
            android:textSize="15sp"
            android:layout_below="@id/tvWaktu_Masuk"
            />
        <TextView
            android:id="@+id/tvBiayaparkir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/biaya"
            android:layout_below="@+id/tvWaktu_Keluar"
            android:textSize="15sp"
            />
    </RelativeLayout>
    <View
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
</LinearLayout>