<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ekoprass.parkirclient.EditParkiran"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#c7f9e2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/nomor_karcis"
            android:textSize="20sp"
            android:id="@+id/tvNoKarcis"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginVertical="5dp"
            app:fontFamily="@font/baumans"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/plat_nomor"
            android:textSize="20sp"
            android:id="@+id/tvPlanomor"
            android:textAlignment="center"
            android:layout_marginVertical="5dp"
            android:textStyle="bold"
            app:fontFamily="@font/baumans"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/waktu_masuk"
            android:textSize="17sp"
            android:id="@+id/tvMasuk"
            android:textAlignment="center"
            android:layout_marginVertical="1dp"
            app:fontFamily="@font/baumans"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/waktu_keluar"
            app:fontFamily="@font/baumans"
            android:textSize="17sp"
            android:id="@+id/tvKeluar"
            android:textAlignment="center"
            android:layout_marginVertical="1dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/kode_tempat_parkir"
            android:textSize="17sp"
            app:fontFamily="@font/baumans"
            android:id="@+id/tvKode"
            android:textAlignment="center"
            android:layout_marginVertical="1dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/durasi"
            app:fontFamily="@font/baumans"
            android:textSize="17sp"
            android:id="@+id/tvDurasi"
            android:textAlignment="center"
            android:layout_marginVertical="1dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/biaya_parkir"
            app:fontFamily="@font/baumans"
            android:textSize="20sp"
            android:id="@+id/tvBiaya"
            android:textAlignment="center"
            android:layout_marginVertical="10dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">
        <Button
            android:id="@+id/btExit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/keluar_parkiran"
            app:fontFamily="@font/baumans"
            android:textColor="#fff"
            android:background="@color/colorPrimary"
            android:layout_marginRight="5dp"
            android:padding="3dp"/>
        <Button
            android:id="@+id/btBackGo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/kembali"
            app:fontFamily="@font/baumans"
            android:textColor="#fff"
            android:background="@color/colorDanger"/>
    </LinearLayout>
</LinearLayout>