<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ekoprass.parkirclient.EditParkiran"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#c7f9e2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/kode_parkiran"
            app:fontFamily="@font/baumans"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/edtKode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:fontFamily="@font/baumans"
            android:hint="Kode Parkiran"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:fontFamily="@font/baumans"
            android:text="@string/nama_parkiran"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edtNama"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:fontFamily="@font/baumans"
            android:layout_height="wrap_content"
            android:hint="Nama"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:fontFamily="@font/baumans"
            android:text="@string/kapasitas"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edtKapasitas"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:fontFamily="@font/baumans"
            android:hint="Kapasitas"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <Button
            android:id="@+id/btEdit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/edit_parkiran"
            android:textColor="#fff"
            android:background="@color/colorPrimary"
            android:layout_marginRight="5dp"
            android:padding="3dp"
            app:fontFamily="@font/baumans"/>
        <Button
            android:id="@+id/btDelete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="#fff"
            android:background="@color/colorDanger"
            app:fontFamily="@font/baumans"/>
        <Button
            android:id="@+id/btBackGo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/kembali"
            android:textColor="#fff"
            android:background="@color/colorDanger"
            app:fontFamily="@font/baumans"/>
    </LinearLayout>
</LinearLayout>
