<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/dataContent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >
        <TextView
            android:id="@+id/tvkode_parkir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            android:layout_alignParentRight="true"
            android:textSize="15sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:layout_below="@id/tvkode_parkir"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/tvKapasitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/kapasitas"
            android:textSize="15sp"
            android:layout_below="@id/tvNama"
            />
    </RelativeLayout>
    <View
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
</LinearLayout>
