<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ekoprass.parkirclient.MainActivity"
    android:background="#c7f9e2">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/kodeParkiran"
        android:layout_marginTop="10dp"
        android:text="@string/kode_tempat_parkir"
        android:textSize="17dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:fontFamily="@font/baumans"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/LL1"
        android:layout_below="@+id/kodeParkiran"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plat_nomor"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:fontFamily="@font/baumans"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plat_nomor"
            android:id="@+id/edtPlat"
            android:fontFamily="@font/baumans"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LL2"
        android:layout_below="@+id/LL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waktu_masuk"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:id="@+id/tvMasuk"
            android:fontFamily="@font/baumans"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tambah_data"
            android:textColor="#fff"
            android:id="@+id/btnTambah"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/baumans"/>

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:scrollbars="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LL2"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/baumans">
    </android.support.v7.widget.RecyclerView>
</RelativeLayout>