<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00a65b"
    tools:context="com.example.ekoprass.parkirclient.Login">
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="12dp"-->
        <!--android:text="Email"-->
        <!--android:textSize="18sp" />-->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="50sp"
            app:fontFamily="@font/baumans" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:background="@drawable/ic_email_black_24dp" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="8.5"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            android:textColor="#fff"
            app:fontFamily="@font/baumans"/>

    </android.support.v7.widget.LinearLayoutCompat>


    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="12dp"-->
        <!--android:text="Password"-->
        <!--android:textSize="18sp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1.5"
        android:background="@drawable/ic_lock_black_24dp"/>
    <EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="8.5"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textColor="#fff"
        app:fontFamily="@font/baumans"/>
    </LinearLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="12dp"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        app:fontFamily="@font/baumans"/>

</LinearLayout>
